--- a/Source Behavior Pack/manifest.json
+++ b/Source Behavior Pack/manifest.json
@@ -26,7 +26,7 @@
     "dependencies": [
         {
             "module_name": "@minecraft/server",
-            "version": "1.12.0-beta"
+            "version": "2.0.0-alpha"
         }
     ]
 }
