--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
         "prettier": "^2.8.8"
     },
     "dependencies": {
-        "@minecraft/server": "^1.12.0-beta.1.21.1-stable"
+        "@minecraft/server": "^2.0.0-beta.1.21.80-preview.21"
     }
 }
